# parkly

./: .dockerignore  .gitignore  .pre-commit-config.yaml  MIGRATIONS.md  README.md  alembic.ini  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init-databases.sql
.github/workflows/: ci.yml
docs/diagrams/domain/: _style.puml  domain_events.puml  domain_exceptions.puml  domain_services.puml  overview.puml  parking_facility.puml  parking_session.puml  repositories.puml  reservation.puml  value_objects.puml  vehicle.puml
src/parkly/adapters/: app_factory.py  config.py  container.py  context.py
src/parkly/application/command/: activate_reservation.py  add_parking_spot.py  cancel_reservation.py  complete_reservation.py  confirm_reservation.py  create_parking_facility.py  create_reservation.py  end_parking_session.py  extend_parking_session.py  extend_reservation.py  register_vehicle.py  remove_parking_spot.py  start_parking_session.py
src/parkly/application/dto/: authenticated_user.py  facility_dto.py  reservation_dto.py  session_dto.py  spot_dto.py  vehicle_dto.py
src/parkly/application/event_handler/: on_reservation_cancelled.py  on_session_ended.py
src/parkly/application/exception/: exceptions.py
src/parkly/application/port/: event_publisher.py  logger.py  token_validator.py
src/parkly/application/query/: find_available_spots.py  find_facilities_by_location.py  get_facility_details.py  get_reservation_details.py  get_session_details.py  (+3 more)
tests/unit/: test_auth_dependency.py  test_goauth_client.py
(+48 files in other folders)
